# OmniMind

./: .gitignore  .md  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  welcome.yml
docs/: configuration.md  development.mdx  docs.json  faq.md  installation.md  introduction.mdx  quickstart.mdx  requirements.txt  usage.md
docs/api-reference/: introduction.mdx
docs/essentials/: configuration.mdx  connection-types.mdx  debugging.mdx  llm-integration.mdx
docs/source/: conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/api/: agent.rst
docs/source/tutorials/: custom_server.rst  gemini_integration.rst
examples/: .env  advanced_usage.py  basic_usage.py  custom_server.py  multi_server_config.json
omnimind/: __init__.py  client.py  config.py
