[metadata]
name = omnimind
version = 0.1.0
author = Lakshya Gupta
author_email = techiralthefuture@gmail.com
description = A plug-and-play Python library for effortless MCP server integration, powered by Google Gemini
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Techiral/OmniMind
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8
install_requires =
    mcp>=1.6.0
    langchain-google-genai>=2.1.2
    langgraph>=0.3.25
    langchain-mcp-adapters>=0.0.7
    python-dotenv>=1.1.0
